# logick

./: pyproject.toml
logick/: __init__.py  controller.py  display.py  gates.py  parse.py  test_controller.py  test_display.py  test_gates.py  test_parse.py  utils.py
