[tool.poetry]
name = "logick"
version = "0.1.0"
description = ""
authors = ["JokeNeverSoke <zengjoseph@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
lark = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.11b1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
